--- a/app_1.json
+++ b/app_1.json
@@ -1,6 +1,6 @@
 {
 	"components": {
-		"SmartBuilding": {
+		"SmartBuild": {
 			"hardware": {
 				"ram": 2,
 				"hdd": 10,
@@ -12,7 +12,7 @@
 		}
 	},
 	"thing_requirements": [{
-		"component": "SmartBuilding",
+		"component": "SmartBuild",
 		"thing_type": "thermostat",
 		"qos_profile": {
 			"latency": 1000,
@@ -20,7 +20,7 @@
 			"bw_t2c": 0.1
 		}
 	}, {
-		"component": "SmartBuilding",
+		"component": "SmartBuild",
 		"thing_type": "fire",
 		"qos_profile": {
 			"latency": 65,
@@ -28,10 +28,10 @@
 			"bw_t2c": 0.1
 		}
 	}, {
-		"component": "SmartBuilding",
+		"component": "SmartBuild",
 		"thing_type": "video",
 		"qos_profile": {
-			"latency": 25,
+			"latency": 30,
 			"bw_c2t": 0.1,
 			"bw_t2c": 5.0
 		}
